--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: rgb(216, 255, 255);
 }
 
 .calculator {
