--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: rgb(216, 255, 255);
+    background: linear-gradient(to bottom, rgb(150, 249, 249), rgb(255, 62, 220));
 }
 
 .calculator {
